--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "start": "next start"
   },
   "dependencies": {
+    "@tailwindcss/line-clamp": "^0.4.2",
     "next": "^12.1.0",
     "react": "17.0.1",
     "react-dom": "17.0.1"
