--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "@tailwindcss/line-clamp": "^0.4.2",
     "next": "^12.1.0",
     "react": "17.0.1",
-    "react-dom": "17.0.1"
+    "react-dom": "17.0.1",
+    "sharp": "^0.31.1"
   },
   "devDependencies": {
     "@types/node": "^18.7.23",
