--- a/package.json
+++ b/package.json
@@ -9,9 +9,10 @@
   },
   "dependencies": {
     "@tailwindcss/line-clamp": "^0.4.2",
-    "next": "^12.1.0",
-    "react": "17.0.1",
-    "react-dom": "17.0.1",
+    "eslint-config-next": "^13.0.0",
+    "next": "^13.0.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "sharp": "^0.31.1"
   },
   "devDependencies": {
