--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "next": "13.0.3-canary.4",
+    "next": "13.4.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "zod": "^3.19.1"
@@ -21,7 +21,7 @@
     "@types/react-dom": "18.0.7",
     "autoprefixer": "^10.4.12",
     "eslint": "8.26.0",
-    "eslint-config-next": "13.0.3",
+    "eslint-config-next": "13.4.1",
     "postcss": "^8.4.18",
     "tailwindcss": "^3.2.1",
     "typescript": "4.8.4"
